--- a/src/app/features/modals/password-manager-modal/password-manager-modal.component.html
+++ b/src/app/features/modals/password-manager-modal/password-manager-modal.component.html
@@ -226,18 +226,24 @@
                           autocomplete="current-password"
                         />
                         <mat-icon matSuffix svgIcon="key"></mat-icon>
-                        <mat-error *ngIf="overviewForm.get('password')?.hasError('required')">
-                          Password is required
-                        </mat-error>
-                        <mat-error *ngIf="overviewForm.get('password')?.hasError('minLength')">
-                          {{ overviewForm.get('password')?.errors?.['minLength']?.message }}
-                        </mat-error>
-                        <mat-error *ngIf="overviewForm.get('password')?.hasError('invalidChars')">
-                          {{ overviewForm.get('password')?.errors?.['invalidChars']?.message }}
-                        </mat-error>
-                        <mat-error *ngIf="overviewForm.get('password')?.hasError('apiError')">
-                          {{ overviewForm.get('password')?.errors?.['apiError']?.message }}
-                        </mat-error>
+                        @if (overviewForm.get('password')?.hasError('required')) {
+                          <mat-error> Password is required </mat-error>
+                        }
+                        @if (overviewForm.get('password')?.hasError('minLength')) {
+                          <mat-error>
+                            {{ overviewForm.get('password')?.errors?.['minLength']?.message }}
+                          </mat-error>
+                        }
+                        @if (overviewForm.get('password')?.hasError('invalidChars')) {
+                          <mat-error>
+                            {{ overviewForm.get('password')?.errors?.['invalidChars']?.message }}
+                          </mat-error>
+                        }
+                        @if (overviewForm.get('password')?.hasError('apiError')) {
+                          <mat-error>
+                            {{ overviewForm.get('password')?.errors?.['apiError']?.message }}
+                          </mat-error>
+                        }
                       </mat-form-field>
                     </form>
                   </div>
@@ -367,15 +373,19 @@
                       matSuffix
                       [svgIcon]="isConfigEncrypted ? 'lock-open' : 'lock'"
                     ></mat-icon>
-                    <mat-error *ngIf="encryptionForm.get('password')?.hasError('required')">
-                      Password is required
-                    </mat-error>
-                    <mat-error *ngIf="encryptionForm.get('password')?.hasError('minLength')">
-                      {{ encryptionForm.get('password')?.errors?.['minLength']?.message }}
-                    </mat-error>
-                    <mat-error *ngIf="encryptionForm.get('password')?.hasError('invalidChars')">
-                      {{ encryptionForm.get('password')?.errors?.['invalidChars']?.message }}
-                    </mat-error>
+                    @if (encryptionForm.get('password')?.hasError('required')) {
+                      <mat-error> Password is required </mat-error>
+                    }
+                    @if (encryptionForm.get('password')?.hasError('minLength')) {
+                      <mat-error>
+                        {{ encryptionForm.get('password')?.errors?.['minLength']?.message }}
+                      </mat-error>
+                    }
+                    @if (encryptionForm.get('password')?.hasError('invalidChars')) {
+                      <mat-error>
+                        {{ encryptionForm.get('password')?.errors?.['invalidChars']?.message }}
+                      </mat-error>
+                    }
                   </mat-form-field>
 
                   @if (!isConfigEncrypted) {
@@ -389,14 +399,14 @@
                         autocomplete="new-password"
                       />
                       <mat-icon matSuffix svgIcon="lock"></mat-icon>
-                      <mat-error
-                        *ngIf="encryptionForm.get('confirmPassword')?.hasError('required')"
-                      >
-                        Please confirm your password
-                      </mat-error>
-                      <mat-error *ngIf="encryptionForm.hasError('passwordMismatch')">
-                        {{ encryptionForm.errors?.['passwordMismatch']?.message }}
-                      </mat-error>
+                      @if (encryptionForm.get('confirmPassword')?.hasError('required')) {
+                        <mat-error> Please confirm your password </mat-error>
+                      }
+                      @if (encryptionForm.hasError('passwordMismatch')) {
+                        <mat-error>
+                          {{ encryptionForm.errors?.['passwordMismatch']?.message }}
+                        </mat-error>
+                      }
                     </mat-form-field>
                   }
                 </form>
@@ -465,25 +475,24 @@
                       autocomplete="current-password"
                     />
                     <mat-icon matSuffix svgIcon="key"></mat-icon>
-                    <mat-error
-                      *ngIf="changePasswordForm.get('currentPassword')?.hasError('required')"
-                    >
-                      Current password is required
-                    </mat-error>
-                    <mat-error
-                      *ngIf="changePasswordForm.get('currentPassword')?.hasError('minLength')"
-                    >
-                      {{
-                        changePasswordForm.get('currentPassword')?.errors?.['minLength']?.message
-                      }}
-                    </mat-error>
-                    <mat-error
-                      *ngIf="changePasswordForm.get('currentPassword')?.hasError('invalidChars')"
-                    >
-                      {{
-                        changePasswordForm.get('currentPassword')?.errors?.['invalidChars']?.message
-                      }}
-                    </mat-error>
+                    @if (changePasswordForm.get('currentPassword')?.hasError('required')) {
+                      <mat-error> Current password is required </mat-error>
+                    }
+                    @if (changePasswordForm.get('currentPassword')?.hasError('minLength')) {
+                      <mat-error>
+                        {{
+                          changePasswordForm.get('currentPassword')?.errors?.['minLength']?.message
+                        }}
+                      </mat-error>
+                    }
+                    @if (changePasswordForm.get('currentPassword')?.hasError('invalidChars')) {
+                      <mat-error>
+                        {{
+                          changePasswordForm.get('currentPassword')?.errors?.['invalidChars']
+                            ?.message
+                        }}
+                      </mat-error>
+                    }
                   </mat-form-field>
 
                   <mat-form-field appearance="outline" class="full-width">
@@ -496,17 +505,21 @@
                       autocomplete="new-password"
                     />
                     <mat-icon matSuffix svgIcon="key"></mat-icon>
-                    <mat-error *ngIf="changePasswordForm.get('newPassword')?.hasError('required')">
-                      New password is required
-                    </mat-error>
-                    <mat-error *ngIf="changePasswordForm.get('newPassword')?.hasError('minLength')">
-                      {{ changePasswordForm.get('newPassword')?.errors?.['minLength']?.message }}
-                    </mat-error>
-                    <mat-error
-                      *ngIf="changePasswordForm.get('newPassword')?.hasError('invalidChars')"
-                    >
-                      {{ changePasswordForm.get('newPassword')?.errors?.['invalidChars']?.message }}
-                    </mat-error>
+                    @if (changePasswordForm.get('newPassword')?.hasError('required')) {
+                      <mat-error> New password is required </mat-error>
+                    }
+                    @if (changePasswordForm.get('newPassword')?.hasError('minLength')) {
+                      <mat-error>
+                        {{ changePasswordForm.get('newPassword')?.errors?.['minLength']?.message }}
+                      </mat-error>
+                    }
+                    @if (changePasswordForm.get('newPassword')?.hasError('invalidChars')) {
+                      <mat-error>
+                        {{
+                          changePasswordForm.get('newPassword')?.errors?.['invalidChars']?.message
+                        }}
+                      </mat-error>
+                    }
                   </mat-form-field>
 
                   <mat-form-field appearance="outline" class="full-width">
@@ -519,14 +532,14 @@
                       autocomplete="new-password"
                     />
                     <mat-icon matSuffix svgIcon="key"></mat-icon>
-                    <mat-error
-                      *ngIf="changePasswordForm.get('confirmNewPassword')?.hasError('required')"
-                    >
-                      Please confirm your new password
-                    </mat-error>
-                    <mat-error *ngIf="changePasswordForm.hasError('passwordMismatch')">
-                      {{ changePasswordForm.errors?.['passwordMismatch']?.message }}
-                    </mat-error>
+                    @if (changePasswordForm.get('confirmNewPassword')?.hasError('required')) {
+                      <mat-error> Please confirm your new password </mat-error>
+                    }
+                    @if (changePasswordForm.hasError('passwordMismatch')) {
+                      <mat-error>
+                        {{ changePasswordForm.errors?.['passwordMismatch']?.message }}
+                      </mat-error>
+                    }
                   </mat-form-field>
                 </form>
               </div>
